esourcing.sourcing project was added.

--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,8 +1,38 @@
 version: '3.4'
 
 services:
+  sourcingdb:
+      container_name: sourcingdb
+      restart: always
+      volumes:
+          - ${WEBAPP_STORAGE_HOME}/site:/data/db
+          #- ./data:/data/db
+      ports:
+          - "27017:27017"
+
   esourcing.product:
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-    ports:
-      - "80"
+        container_name: esourcingproduct
+        environment:
+            - ASPNETCORE_ENVIRONMENT=Development
+            - "ProductDatabaseSettings:ConnectionString=mongodb://sourcingdb:27017"
+        depends_on:
+            - sourcingdb
+        volumes:
+            - ${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets
+            - ${HOME}/.aspnet/https:/root/.aspnet/https/
+        ports:
+            - "8000:80"
+
+  esourcing.sourcing:
+      container_name: esourcingsourcing
+      environment:
+          - ASPNETCORE_ENVIRONMENT=Development
+          - "SourcingDatabaseSettings:ConnectionString=mongodb://sourcingdb:27017"
+      depends_on:
+          - sourcingdb
+      volumes:
+          - ${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets
+          - ${HOME}/.aspnet/https:/root/.aspnet/https/
+      ports:
+          - "8001:80"
+
