Product MicroServıs bolumunun gelıstırmesı yapıldı ve Robo3t de SourcingMongoDb Hem sorucig kayıtları hem de product kayıtları gorundu

--- a/ESourcing.Sourcing/appsettings.json
+++ b/ESourcing.Sourcing/appsettings.json
@@ -2,7 +2,7 @@
   "SourcingDatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "SourcingMongoDb",
-    "CollectionName": "Products"
+    "CollectionName": "Auctions"
   },
   "Logging": {
     "LogLevel": {
