--- a/ESourcing.Sourcing/appsettings.json
+++ b/ESourcing.Sourcing/appsettings.json
@@ -11,5 +11,10 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "EventBus": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
+  }
 }
