--- a/ESourcing.Order/appsettings.json
+++ b/ESourcing.Order/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    // "OrderConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=OrderDb;",
+    "OrderConnection": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,5 +10,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "EventBus": {
+    "HostName": "localhost",
+    "UserName": "guest",
+    "Password": "guest"
+  }
 }
