--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -17,6 +17,14 @@ services:
         - "5672:5672"
         - "15672:15672"
 
+  orderdb:
+        container_name: orderdb
+        ports:
+            - "1433:1433"
+        environment:
+            SA_PASSWORD: "SwN12345678"
+            ACCEPT_EULA: "Y"
+
   esourcing.product:
         container_name: esourcingproduct
         environment:
@@ -45,3 +53,18 @@ services:
       ports:
           - "8001:80"
 
+  esourcing.order:
+     container_name: esourcingorder
+     restart: on-failure
+     environment:
+         - ASPNETCORE_ENVIRONMENT=Development
+         - "ConnectionStrings:OrderConnection=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+         - "EventBus:HostName=rabbitmq"
+     depends_on:
+         - orderdb
+         - rabbitmq
+     volumes:
+         - ${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets
+         - ${HOME}/.aspnet/https:/root/.aspnet/https/
+     ports:
+         - "8002:80"
