--- a/ESourcing.Order/ESourcing.Order.csproj
+++ b/ESourcing.Order/ESourcing.Order.csproj
@@ -17,10 +17,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Order.Infrastructure\Ordering.Infrastructure.csproj" />
     <ProjectReference Include="..\EventBusRabbitMQ\EventBusRabbitMQ.csproj" />
     <ProjectReference Include="..\Order.Application\Ordering.Application.csproj" />
     <ProjectReference Include="..\Order.Core\Ordering.Core.csproj" />
+    <ProjectReference Include="..\Order.Infrastructure\Ordering.Infrastructure.csproj" />
   </ItemGroup>
 
 
