--- a/ESourcing.Order/appsettings.json
+++ b/ESourcing.Order/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     // "OrderConnection": "Server=(localdb)\\mssqllocaldb;Integrated Security=true;Initial Catalog=OrderDb;",
-    "OrderConnection": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+    "OrderConnection": "Server=localhost;Database=OrderDb;User Id=sa;Password=Odb12345678;"
   },
   "Logging": {
     "LogLevel": {
