--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -22,7 +22,7 @@ services:
         ports:
             - "1433:1433"
         environment:
-            SA_PASSWORD: "SwN12345678"
+            SA_PASSWORD: "Odb12345678"
             ACCEPT_EULA: "Y"
 
   esourcing.product:
@@ -58,7 +58,7 @@ services:
      restart: on-failure
      environment:
          - ASPNETCORE_ENVIRONMENT=Development
-         - "ConnectionStrings:OrderConnection=Server=orderdb;Database=OrderDb;User Id=sa;Password=SwN12345678"
+         - "ConnectionStrings:OrderConnection=Server=orderdb;Database=OrderDb;User Id=sa;Password=Odb12345678"
          - "EventBus:HostName=rabbitmq"
      depends_on:
          - orderdb
