--- a/ESourcing.Sourcing/appsettings.json
+++ b/ESourcing.Sourcing/appsettings.json
@@ -1,7 +1,7 @@
 {
   "SourcingDatabaseSettings": {
     "ConnectionString": "mongodb://localhost:27017",
-    "DatabaseName": "SourcingMongoDb",
+    "DatabaseName": "SourcingMongoDb"
   },
   "Logging": {
     "LogLevel": {
