Ocelot api was added.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,3 +27,10 @@ services:
     build:
       context: .
       dockerfile: ESourcing.Order/Dockerfile
+
+  esourcing.apigateway:
+    image: ${DOCKER_REGISTRY-}esourcingapigateway
+    build:
+      context: .
+      dockerfile: ESourcing.APIGateway/Dockerfile
+
