--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -68,3 +68,18 @@ services:
          - ${HOME}/.aspnet/https:/root/.aspnet/https/
      ports:
          - "8002:80"
+
+  esourcing.apigateway:
+    container_name: esourcingapigateway
+    environment:
+        - ASPNETCORE_ENVIRONMENT=Development
+    depends_on:
+        - esourcing.product
+        - esourcing.sourcing
+        - esourcing.order
+    volumes:
+        - ${HOME}/.microsoft/usersecrets/:/root/.microsoft/usersecrets
+        - ${HOME}/.aspnet/https:/root/.aspnet/https/
+    ports:
+        - "5000:80"
+
