Api geliştirmeleri yapıldı ve sign Up ekranındaki duzenlemeler yapıldı ancak arka tarafı eklenmedı henız.

--- a/ESourcing.UI/appsettings.json
+++ b/ESourcing.UI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ApiSettings": {
+    "BaseAddress": "http://localhost:7000",
+    "ProductPath": "/Product",
+    "AuctionPath": "/Auction",
+    "Bid": "/Bid",
+    "OrderPath": "/Order"
+  },
   "ConnectionStrings": {
     //"IdentityConnection": "Server=sourcingsqldb",
     "IdentityConnection": "Server=localhost;Database=WebAppDb;User Id=sa;Password=Odb12345678;"
