--- a/ESourcing.Order/Dockerfile
+++ b/ESourcing.Order/Dockerfile
@@ -1,10 +1,10 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/aspnet:5.0-focal AS base
 WORKDIR /app
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0-focal AS build
 WORKDIR /src
 COPY ["ESourcing.Order/ESourcing.Order.csproj", "ESourcing.Order/"]
 COPY ["Order.Infrastructure/Ordering.Infrastructure.csproj", "Order.Infrastructure/"]
