--- a/ESourcing.Order/appsettings.json
+++ b/ESourcing.Order/appsettings.json
@@ -15,6 +15,7 @@
   "EventBus": {
     "HostName": "localhost",
     "UserName": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "RetryCount": 3
   }
 }
