--- a/ESourcing.Sourcing/appsettings.json
+++ b/ESourcing.Sourcing/appsettings.json
@@ -14,6 +14,7 @@
   "EventBus": {
     "HostName": "localhost",
     "UserName": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "RetryCount": 3
   }
 }
