--- a/Order.Application/Ordering.Application.csproj
+++ b/Order.Application/Ordering.Application.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\EventBusRabbitMQ\EventBusRabbitMQ.csproj" />
-    <ProjectReference Include="..\Order.Core\Ordering.Core.csproj" />
+    <ProjectReference Include="..\Order.Core\Ordering.Domain.csproj" />
   </ItemGroup>
 
 </Project>
