--- a/Order.Infrastructure/Ordering.Infrastructure.csproj
+++ b/Order.Infrastructure/Ordering.Infrastructure.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Order.Core\Ordering.Core.csproj" />
+    <ProjectReference Include="..\Order.Core\Ordering.Domain.csproj" />
   </ItemGroup>
 
 </Project>
